<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StatActivity" 
    android:orientation="vertical">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Total"/>
	<TextView
	    android:id="@+id/total"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Todo_Total"/>
	<TextView
	    android:id="@+id/todo_total"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Todo_Total_Checked"/>
	<TextView
	    android:id="@+id/todo_total_checked"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Todo_Total_Unchecked"/>
	<TextView
	    android:id="@+id/todo_total_unchecked"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Archive_Total"/>
	<TextView
	    android:id="@+id/archive_total"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Archive_Total_Checked"/>
	<TextView
	    android:id="@+id/archive_total_checked"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Archive_Total_Unchecked"/>    
	<TextView
	    android:id="@+id/archive_total_unchecked"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>    
	    
	

</LinearLayout>
